Styles fix, overflow...etc.

--- a/src/scss/monitor.scss
+++ b/src/scss/monitor.scss
@@ -168,16 +168,18 @@
 
         .tableFixHead {
             overflow-y: scroll;
-            overflow-x: auto;
+            overflow-x: hidden;
             height: 100%;
 
             >table {
                 width: 100%;
+                min-width: 800px;
                 text-align: center;
                 border-collapse: collapse;
                 background-color: #fff;
                 font-size: 0.9em;
                 display: none;
+                table-layout: fixed;
 
                 &.selected {
                     display: table;
